2003-02-24  David N. Welton  <davidw@dedasys.com>

	* htmlparse.tcl (::htmlparse::PrepareHtml): Use string map instead
	of regsub.

2003-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* htmlparse.tcl (::htmlparse::mapEscapes): Fixed typo (strimg ->
	string) to pass test suite.

2003-02-05  David N. Welton  <davidw@dedasys.com>

	* htmlparse.tcl (::htmlparse::mapEscapes): Use string match
	instead of regexp. Feature [ 676536 ].

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.man: More semantic markup, less visual one.

2002-08-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Fixed SF bug #579853. Added an 'bsl' key and
	  value to 'htmlparse::escapes' required to reconvert the
	  backslash escapes inserted by 'htmlparse::PrepareHtml'. Thanks
	  to Michael Cleverly <cleverly@users.sourceforge.net> for the
	  report.

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* htmlparse.tcl:
	* htmlparse.n:
	* htmlparse.man: Bumped to version 0.3.

2002-02-09  David N. Welton  <davidw@dedasys.com>

	* htmlparse.n: Cleaned up some of the language in the man page.

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Frink 2.2 run, fixed dubious code.

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Fixed dubious code reported by frink.

2001-03-23  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Changed the implementation to allow incremental
	  processing (taken from plume, in essence). Interface is
	  different too (more option oriented). Fixed errors in the
	  conversion into a tree (nesting of <p>, <li> and <hxx> tags),
	  through an internal postproessing step for the tree..

	* htmlparse.n: Adapted documentstion to changes above.
	* htmlparse.test: Created testsuite.

2001-03-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>
